--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@fortawesome/free-brands-svg-icons": "^6.4.0",
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@kolkov/angular-editor": "^3.0.0-beta.0",
+    "angular-font-awesome": "^3.1.2",
     "bootstrap": "^5.3.0-alpha3",
     "bootstrap-icons": "^1.10.5",
     "jquery": "^3.6.4",
