--- a/package.json
+++ b/package.json
@@ -20,12 +20,16 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "@coreui/angular": "^4.4.9",
+    "@coreui/coreui": "^4.2.6",
+    "@coreui/icons-angular": "^4.4.7",
     "@fortawesome/angular-fontawesome": "^0.12.1",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-brands-svg-icons": "^6.4.0",
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@kolkov/angular-editor": "^3.0.0-beta.0",
+    "@ng-bootstrap/ng-bootstrap": "^14.1.1",
     "angular-font-awesome": "^3.1.2",
     "bootstrap": "^5.3.0-alpha3",
     "bootstrap-icons": "^1.10.5",
