--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
     "bootstrap": "^5.3.0-alpha3",
     "bootstrap-icons": "^1.10.5",
     "jquery": "^3.6.4",
+    "ngx-socket-io": "^4.5.1",
     "ngx-toastr": "^16.1.1",
     "rxjs": "~7.8.0",
+    "socket.io-client": "^4.6.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
