--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@kolkov/angular-editor": "^3.0.0-beta.0",
     "@ng-bootstrap/ng-bootstrap": "^14.1.1",
+    "@stripe/stripe-js": "^1.35.0",
     "angular-font-awesome": "^3.1.2",
     "bootstrap": "^5.3.0-alpha3",
     "bootstrap-icons": "^1.10.5",
     "jquery": "^3.6.4",
+    "ng2-scroll-to": "^1.0.7",
     "ngx-socket-io": "^4.5.1",
     "ngx-toastr": "^16.1.1",
     "rxjs": "~7.8.0",
